backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: bootcampt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: vmi3169176
      containers:
        - name: devopsbootcamp
          image: obianuju127/devopsbootcamp:backend-test-v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
